// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SanityContent should render blockquote blocks 1`] = `
<div>
  <blockquote>Build your next Vue.js application with confidence using <a href="https://nuxtjs.org">NuxtJS</a>. An open source framework making web development simple and powerful.</blockquote>
</div>
`;

exports[`SanityContent should render exampleMarkDefs blocks 1`] = `
<div>
  <ul>
    <li>
      <strong>Google Analytics</strong>: The Sites use Google Analytics. Further information is available at <a href="https://tools.google.com/dlpage/gaoptout/">https://tools.google.com/dlpage/gaoptout/</a>.
    </li>
  </ul>
</div>
`;

exports[`SanityContent should render heading blocks 1`] = `
<div>
  <h3>3. Providing your personal data to others</h3>
</div>
`;

exports[`SanityContent should render link blocks 1`] = `
<div>
  <a href="http://test.com/"></a>
</div>
`;

exports[`SanityContent should render list blocks 1`] = `
<div>
  <ol>
    <li>test</li>
    <li>thing</li>
  </ol>
</div>
`;

exports[`SanityContent should render nestedList blocks 1`] = `
<div>
  <h3>3. Providing your personal data to others</h3>
  <ol>
    <li>test</li>
    <li>thing</li>
    <ul>
      <li>nested</li>
      <li>list</li>
    </ul>
  </ol>
</div>
`;

exports[`SanityContent should render strong blocks 1`] = `
<div>
  <p>An example of <strong>bold</strong> text and <strong>another</strong>.</p>
</div>
`;

exports[`SanityContent should render with no props 1`] = `<div></div>`;

exports[`SanityContent should render with non-standard props 1`] = `<section class="customClass"></section>`;
